[package]
name = "osrank-experiments"
version = "0.1.0"
authors = ["Alfredo Di Napoli <alfredo.dinapoli@gmail.com>"]
edition = "2018"

[package.metadata]
assets = "data"

[lib]

name = "osrank"
path = "src/lib.rs"

[[bin]]
name = "osrank-test"
path = "bin/main.rs"

[[bin]]
name = "osrank-source-dependencies"
path = "bin/source_dependencies.rs"
required-features = ["build-binary"]

[[bin]]
name = "osrank-source-contributions"
path = "bin/source_contributions.rs"
required-features = ["build-binary"]

[[bin]]
name = "osrank-adjacency-matrix"
path = "bin/adjacency_matrix.rs"
required-features = ["build-binary"]

[features]

build-binary = ["csv", "reqwest", "clap"]

[dependencies]

serde = { version = "1.0.60", features = ["derive"]}
serde_json = "1.0.40"
failure = "0.1.5"
failure_derive = "0.1.5"
either = "^1.5"
num-traits = "^0.2"
derive_more = "^0.13"

#Linear algebra/math crates
petgraph = "0.4.13"
fraction = "0.6"
sprs = "^0.6"
ndarray = "^0.12"

# Binary-only dependencies
# See: https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
csv = { version = "1.1", optional = true }
reqwest = { version = "^0.9", optional = true }
clap = { version = "^2.33", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
