[package]
name = "osrank-experiments"
version = "0.1.0"
authors = ["Alfredo Di Napoli <alfredo.dinapoli@gmail.com>"]
edition = "2018"

[package.metadata]
assets = "data"

[lib]

name = "osrank"
path = "src/lib.rs"
bench = false # https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options

[[bin]]
name = "osrank-test"
path = "bin/main.rs"
bench = false

[[bin]]
name = "osrank-source-dependencies"
path = "bin/source_dependencies.rs"
bench = false
required-features = ["build-binary"]

[[bin]]
name = "osrank-source-contributions"
path = "bin/source_contributions.rs"
bench = false
required-features = ["build-binary"]

[[bin]]
name = "osrank-adjacency-matrix"
path = "bin/adjacency_matrix.rs"
bench = false
required-features = ["build-binary"]

[[bin]]
name = "osrank-export-to-gephi"
path = "bin/export_gephi.rs"
required-features = ["build-binary"]

[features]

build-binary = ["reqwest", "clap", "failure", "failure_derive", "env_logger"]

[dependencies]

num-traits = "^0.2"
derive_more = "^0.13"
itertools = "^0.8.0"
fnv = "^1.0.3"
log = "0.4.0"
rayon = "^1.2.0"

# We need to lock quickcheck to the same version of rand used by this crate.
quickcheck = "=0.9"
quickcheck_macros = "=0.8"

#Importers/exporters crates
csv = "^1.1"
serde = { version = "1.0.60", features = ["derive"]}
serde_json = "1.0.40"

#Linear algebra/math crates
petgraph = "0.4.13"
fraction = "0.6"
sprs = "^0.6"
ndarray = "=0.12.1"
rand = "=0.7"
rand_xorshift = "=0.2.0"
rand_xoshiro  = "=0.4.0"

#Doman-specific crates
oscoin-graph-api = { git = "https://github.com/oscoin/graph-api.git", rev = "c8eed614f0d8d4f0ab265416f8caf2f4c60a1560" }

# Binary-only dependencies
# See: https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
reqwest = { version = "^0.9", optional = true }
clap = { version = "^2.33", optional = true }
failure = { version = "0.1.5", optional = true}
failure_derive = { version = "0.1.5", optional = true}
env_logger = { version = "0.6.2", optional = true}

[dev-dependencies]
pretty_assertions = "0.6.1"
tempfile = "^3.1.0"
criterion = "0.3.0"
arrayref = "0.3.5"

[[bench]]
name = "osrank_naive_development"
path = "benches/osrank_naive_development.rs"
harness = false

[[bench]]
name = "osrank_naive_nightly"
path = "benches/osrank_naive_nightly.rs"
harness = false
